
2020-05-16  Ron Norman <rjn@inglenet.com>

	* fisam.c: Fixed problem with READ PREVIOUS/DELETE/READ PREVIOUS
				when reading thru a group of duplicate keys

2020-04-28  Ron Norman <rjn@inglenet.com>
	* common.h,move.c: cob_set_llint is now passed a value to do size
				checking. It also now checks module->flag_binary_truncate
				and truncates the data as needed

2020-04-26  Ron Norman <rjn@inglenet.com>
	* common.h,move.c,sysdefines.h: Updates for speeding up arithmetic

2020-04-26  Ron Norman <rjn@inglenet.com>

	* fileio.c: For LINE SEQUENTIAL and OPEN I-O some platforms
				(SUNOS for one) require that a fflush be done
				between each read/write of the file

2020-04-17  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed compile warnings
	* fisam.c: Fixed sync/commit routine 
	* fbdb.c: Fixed I/O routine pointers

2020-04-14  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to NOT mix I/O to FILE * via putc and 'int fd' via write
	            'FILE *' is buffered and 'int fd' is NOT so the data
				can end up in a very strange sequence in the file

2020-04-14  Ron Norman <rjn@inglenet.com>

	* common.h: Add fields for implementing LINE SEQUENTIAL pipes
	* fileio.c: Add code for LINE SEQUENTIAL pipes

2020-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: changed "FUNCTION/USING parameter" to "FUNCTION/USING argument"
	* screenio.c: moved screen initialization from internal to external
	  called function

2020-03-28  Ron Norman <rjn@inglenet.com>

	* sysdefines.h: Add COB_MAX_CHAR_SIZE, Largest 'static char' 
			supported by the C compiler

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: adjusted invocation of help2man, using new defines
	  HELPSOURCES and HELP2MAN_OPTS
	* Makefile.am: honor new conditional MAKE_HAS_PREREQ_ONLY

2020-03-01  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c, common.h: define and use COB_FILE_MODE for _WIN32 and
	  COB_OPEN_TEMPORARY for all other environments